<resources>
    <string name="app_name">Entomology</string>

    //Button
    <string name="text_button_omitir">Omitir</string>
    <string name="text_button_guargar">Guardar</string>
    <string name="text_button_subirFoto">Subir Foto</string>

    <string name="compartir_ubicacion">Compartenos tu ubicación</string>
    <string name="compartir_ubicacbión_contenido">Deja que Entomology conozca tu ubicación para gestionar tus registros de una mejor manera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="any_imagenview">Imagen generica</string>
    <string name="new_count">Nuevo conteo</string>
    <string name="reports">Informes</string>
    <string name="records">Registros</string>
    <string name="description_imagebutton">boton encargado de adicionar un nuevo elemento a la lista</string>

</resources>